# stance_detector

./: .gitignore  README.md  config.yaml  pyproject.toml  setup.sh
data/: semeval_taskA.csv  semeval_taskB.csv
src/stance_detector/: aft_decoding.py  evaluation.py  flant5_runner.py  pmi_decoding.py  preprocess_text.py  prompt_builder.py  prompt_config.py  prompt_perplexity.py
src/stance_detector/utils/: argparse_utils.py  lmppl.py  logger.py  preprocessor.py
tests/: test_aft_decoding.py  test_evaluation.py  test_flant5_runner.py  test_pmi_decoding.py  test_preprocess_text.py  test_prompt_builder.py  test_prompt_perplexity.py
tutorials/: 0.optional-preprocess_tweets.ipynb  1-build_prompts_for_llm.ipynb  2-get_flant5_greedy_output.ipynb  3.1-get_pmi_decoding_labels.ipynb  3.2-get_aft_decoding_labels.ipynb  4-evaluation.ipynb  5-get_prompt_perplexity.ipynb
