[project]
name = "stance-detector"
version = "0.1.0"
description = "Code for stance detection."
readme = "README.md"
requires-python = "==3.7.9"
dependencies = [
    "accelerate==0.13.1",
    "black>=23.3.0",
    "ipykernel>=6.16.2",
    "pandas==1.2.1",
    "pyarrow>=12.0.1",
    "pytest>=7.4.4",
    "pyyaml>=6.0.1",
    "sentencepiece==0.1.96",
    "torch>=1.13.1",
    "transformers==4.23.1",
]
